have_A_great_day

--- a/bachelor_testing.ipynb
+++ b/bachelor_testing.ipynb
@@ -537,18 +537,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "id": "3cbae138",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "\n",
     "final_data = pd.read_csv(\"/work/MarkusLundsfrydJensen#1865/Bachelor_project/annotation_data_translated_with_blame_heuristics.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "id": "7b9cf89c",
    "metadata": {},
    "outputs": [
@@ -723,13 +724,34 @@
        "4  [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "final_data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "d9f66a1e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Statsministerens redegørelse i henhold til grundlovens § 38 (mundtlig del)'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "final_data.loc[2]['agenda']"
    ]
   },
   {
@@ -833,7 +855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "38f55e39",
    "metadata": {},
    "outputs": [
@@ -850,8 +872,7 @@
     }
    ],
    "source": [
-    "blamed = extract_blamed_sentences(final_data, \"blame_in_text\", \"blame_binary\")\n",
-    "print(blamed[0])   # → list of sentences marked as blame in first row\n"
+    "blamed = extract_blamed_sentences(final_data, \"blame_in_text\", \"blame_binary\")\n"
    ]
   },
   {
@@ -2278,11 +2299,193 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "d179daf0",
+   "execution_count": 5,
+   "id": "22462474",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0970200124123757"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import ast\n",
+    "\n",
+    "def total_blame_percentage(string_rows):\n",
+    "    \"\"\"\n",
+    "    Calculate the total percentage of blame-sentences across all rows,\n",
+    "    converting string representations of lists into actual lists.\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    string_rows : list of str\n",
+    "        Each element is a string like '[1, 0, 1]' representing a row of blame labels.\n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "    float\n",
+    "        Total percentage of blame-sentences (0–100).\n",
+    "    \"\"\"\n",
+    "    total_sentences = 0\n",
+    "    total_blame = 0\n",
+    "\n",
+    "    for row_str in string_rows:\n",
+    "        try:\n",
+    "            row = ast.literal_eval(row_str)  # convert string to list\n",
+    "            if not isinstance(row, list):\n",
+    "                continue  # skip if not a list\n",
+    "            row = [int(val) for val in row]  # ensure integers\n",
+    "            total_sentences += len(row)\n",
+    "            total_blame += sum(row)\n",
+    "        except (ValueError, SyntaxError):\n",
+    "            continue  # skip invalid rows\n",
+    "\n",
+    "    if total_sentences == 0:\n",
+    "        return 0.0\n",
+    "\n",
+    "    return (total_blame / total_sentences) * 100\n",
+    "\n",
+    "total_blame_percentage(final_data['blame_binary'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ffd3040f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "list"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# OBS:: clean columns when done:\n",
+    "import pandas as pd\n",
+    "import ast\n",
+    "\n",
+    "final_data = pd.read_csv(\"/work/MarkusLundsfrydJensen#1865/Bachelor_project/annotation_data_translated_with_blame_heuristics.csv\")\n",
+    "\n",
+    "\n",
+    "cleaned_final_data = final_data\n",
+    "\n",
+    "cleaned_final_data['blame_in_text'] = cleaned_final_data['blame_in_text'].apply(ast.literal_eval)\n",
+    "cleaned_final_data['blame_binary'] = cleaned_final_data['blame_binary'].apply(ast.literal_eval) \n",
+    "\n",
+    "\n",
+    "type(cleaned_final_data.loc[0]['blame_binary'])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "5267a154",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'sequence': 'The meeting is open.',\n",
+       "  'labels': ['neutral', 'blame', 'praise'],\n",
+       "  'scores': [0.999998927116394,\n",
+       "   1.1550985163921723e-06,\n",
+       "   1.695876505891647e-07]},\n",
+       " {'sequence': 'Under the Constitution, the Folketing has today met for its first meeting in the new parliamentary year.',\n",
+       "  'labels': ['neutral', 'praise', 'blame'],\n",
+       "  'scores': [0.9999994039535522,\n",
+       "   2.025911953751347e-07,\n",
+       "   1.3265680820495618e-07]},\n",
+       " {'sequence': \"As the Member who has long since been a member of the Parliament, it is incumbent on me, pursuant to Paragraph 2 (3) of the Danish Parliament's Rules of Procedure, to direct the election of the Bureau of Things and the President of Parliament, Mr Erling Olsen, the Social Democratic Party, has been nominated by all the Members of Parliament.\",\n",
+       "  'labels': ['neutral', 'praise', 'blame'],\n",
+       "  'scores': [0.9999915361404419,\n",
+       "   1.426016211780734e-07,\n",
+       "   1.3001931620237883e-07]},\n",
+       " {'sequence': 'In the absence of any other recommendations, I shall consider the recommendation as adopted.',\n",
+       "  'labels': ['neutral', 'blame', 'praise'],\n",
+       "  'scores': [0.999942421913147,\n",
+       "   1.534052245233397e-07,\n",
+       "   1.4351657284805697e-07]},\n",
+       " {'sequence': '(Stop).',\n",
+       "  'labels': ['neutral', 'blame', 'praise'],\n",
+       "  'scores': [0.9998593330383301,\n",
+       "   0.001601535826921463,\n",
+       "   1.3451570168854232e-07]},\n",
+       " {'sequence': 'It has been adopted.',\n",
+       "  'labels': ['neutral', 'blame', 'praise'],\n",
+       "  'scores': [0.9999470114707947,\n",
+       "   9.72230700426735e-05,\n",
+       "   1.5197760205865052e-07]},\n",
+       " {'sequence': \"As Vice-Presidents, in addition to the party to which the President belongs, the four largest parties in the Chamber have appointed the following members: first Vice-President, Mr Ivar Hansen, Left, second Vice-President, Mr Henning Grove, Conservative People's Party, third Vice-President, Mrs Margrete Auken, Socialist People's Party, and fourth Vice-President, Mrs Elisabeth Arnold, Radical Left.\",\n",
+       "  'labels': ['neutral', 'praise', 'blame'],\n",
+       "  'scores': [0.9999995231628418,\n",
+       "   5.372237410483649e-07,\n",
+       "   1.2883560884802137e-07]},\n",
+       " {'sequence': 'The persons concerned are then elected.',\n",
+       "  'labels': ['neutral', 'blame', 'praise'],\n",
+       "  'scores': [0.9999911785125732,\n",
+       "   3.1445443937627715e-07,\n",
+       "   1.512673151182753e-07]},\n",
+       " {'sequence': \"According to the electoral federations and the group's recommendation, the following members were elected:\",\n",
+       "  'labels': ['neutral', 'praise', 'blame'],\n",
+       "  'scores': [0.9999995827674866,\n",
+       "   1.6868831664851314e-07,\n",
+       "   1.2764448342750256e-07]},\n",
+       " {'sequence': \"Mrs Grete Schødt's, the Social Democratic Party, Mr Ove Fich, the Social Democratic Party, Mr Helge Sander, the Left, and Mr Niels Ahlmann-Ohlsen, the Conservative People's Party.\",\n",
+       "  'labels': ['neutral', 'praise', 'blame'],\n",
+       "  'scores': [0.9999991059303284,\n",
+       "   4.858613351643726e-07,\n",
+       "   4.0055778072201065e-07]},\n",
+       " {'sequence': 'This is the way things are going, and I would ask the President-elect of the House to take the chair.',\n",
+       "  'labels': ['neutral', 'blame', 'praise'],\n",
+       "  'scores': [0.08710642904043198,\n",
+       "   1.6451017472718377e-06,\n",
+       "   1.709226324919655e-07]},\n",
+       " {'sequence': 'I wish the Bureau every success in its work.',\n",
+       "  'labels': ['neutral', 'praise', 'blame'],\n",
+       "  'scores': [0.9993757605552673, 0.9976018071174622, 1.6597169860688155e-07]}]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cleaned_final_data.loc[0]['blame_in_text']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3c4bdb0a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "list"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cleaned_final_data.to_csv(\"/work/MarkusLundsfrydJensen#1865/Bachelor_project/cleaned_annotation_data_translated_with_blame_heuristics.csv\", index = False)\n"
+   ]
   }
  ],
  "metadata": {
