--- a/outlining.ipynb
+++ b/outlining.ipynb
@@ -155,7 +155,8 @@
     "# Clear PyTorch cache on GPU\n",
     "torch.cuda.empty_cache()\n",
     "torch.cuda.reset_peak_memory_stats()\n",
-    "'''\n"
+    "'''\n",
+    "# This is a comment to test git\n"
    ]
   },
   {
