--- a/outlining.ipynb
+++ b/outlining.ipynb
@@ -94,10 +94,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "947168e9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/work/RuneEgeskovTrust#9638/miniconda3/envs/blame/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import transformers\n",
     "import accelerate\n",
@@ -105,8 +114,8 @@
     "import json\n",
     "import pandas as pd\n",
     "from outlines import from_transformers, Generator\n",
-    "from pydantic import BaseModel, Field, conlist\n",
-    "from typing import List, Literal, Annotated, Optional"
+    "from pydantic import BaseModel, Field\n",
+    "from typing import List, Optional"
    ]
   },
   {
@@ -169,8 +178,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Fetching 4 files: 100%|██████████| 4/4 [00:47<00:00, 11.76s/it]\n",
-      "Loading checkpoint shards: 100%|██████████| 4/4 [00:10<00:00,  2.50s/it]\n"
+      "Fetching 4 files: 100%|██████████| 4/4 [00:55<00:00, 13.78s/it]\n",
+      "Loading checkpoint shards: 100%|██████████| 4/4 [00:10<00:00,  2.64s/it]\n"
      ]
     }
    ],
@@ -497,134 +506,6 @@
    "source": [
     "data = json.loads(result)\n",
     "print(json.dumps(data, indent=2))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b2db79f9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Define the structured output schema for semantic role labeling\n",
-    "class Argument(BaseModel):\n",
-    "    role: str = Field(description=\"Semantic role (e.g., ARG0/Agent, ARG1/Patient, ARGM-TMP/Time, ARGM-LOC/Location)\")\n",
-    "    text: str = Field(description=\"The text span filling this role\")\n",
-    "\n",
-    "class Predicate(BaseModel):\n",
-    "    predicate: str = Field(description=\"The main predicate/verb\")\n",
-    "    agent: str = Field(description=\"ARG0: The entity performing the action (who/what does it)\")\n",
-    "    patient: str = Field(description=\"ARG1: The entity affected by the action (who/what is affected)\", default=\"\")\n",
-    "    arguments: List[Argument] = Field(description=\"List of semantic arguments for this predicate\")\n",
-    "\n",
-    "class SemanticRoleLabeling(BaseModel):\n",
-    "    sentence: str = Field(description=\"The original sentence\")\n",
-    "    predicates: List[Predicate] = Field(description=\"List of predicates with their semantic roles\")\n",
-    "\n",
-    "# Create a structured generator\n",
-    "generator = Generator(model, SemanticRoleLabeling)\n",
-    "\n",
-    "# Example text for semantic role labeling\n",
-    "text = \"John ate an apple in the park yesterday.\"\n",
-    "\n",
-    "# Create the prompt\n",
-    "prompt = f\"\"\"Perform semantic role labeling on the following sentence. Identify all predicates and their semantic arguments.\n",
-    "\n",
-    "Sentence: {text}\n",
-    "\n",
-    "Common semantic roles:\n",
-    "- ARG0: Agent (who performs the action)\n",
-    "- ARG1: Patient/Theme (what is affected by the action)\n",
-    "- ARG2: Recipient, Beneficiary, or Instrument\n",
-    "- ARGM-TMP: Temporal (when)\n",
-    "- ARGM-LOC: Location (where)\n",
-    "- ARGM-MNR: Manner (how)\n",
-    "- ARGM-PRP: Purpose (why)\n",
-    "\n",
-    "Analyze the sentence and output the semantic role labeling in the specified JSON format.\"\"\"\n",
-    "\n",
-    "# Generate structured output\n",
-    "result = generator(prompt, max_new_tokens=2048)\n",
-    "\n",
-    "'''\n",
-    "# Print the results\n",
-    "print(\"Original sentence:\", result.sentence)\n",
-    "print(\"\\nSemantic Role Labeling:\")\n",
-    "for pred in result.predicates:\n",
-    "    print(f\"\\nPredicate: {pred.predicate}\")\n",
-    "    for arg in pred.arguments:\n",
-    "        print(f\"  {arg.role}: {arg.text}\")\n",
-    "\n",
-    "'''"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "a6196f18",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "df = pd.read_csv(\"annotation_data.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "dbee5ec6",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>version https://git-lfs.github.com/spec/v1</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>oid sha256:3fccfc711d5867025434f4f07129234c7ea...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>size 68627460</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "          version https://git-lfs.github.com/spec/v1\n",
-       "0  oid sha256:3fccfc711d5867025434f4f07129234c7ea...\n",
-       "1                                      size 68627460"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.head()"
    ]
   }
  ],
