--- a/old_stuff.ipynb
+++ b/old_stuff.ipynb
@@ -150,6 +150,65 @@
     "\n",
     "Output your analysis in JSON format.\"\"\""
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "31a78527",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define the structured output schema for semantic role labeling\n",
+    "class Argument(BaseModel):\n",
+    "    role: str = Field(description=\"Semantic role (e.g., ARG0/Agent, ARG1/Patient, ARGM-TMP/Time, ARGM-LOC/Location)\")\n",
+    "    text: str = Field(description=\"The text span filling this role\")\n",
+    "\n",
+    "class Predicate(BaseModel):\n",
+    "    predicate: str = Field(description=\"The main predicate/verb\")\n",
+    "    agent: str = Field(description=\"ARG0: The entity performing the action (who/what does it)\")\n",
+    "    patient: str = Field(description=\"ARG1: The entity affected by the action (who/what is affected)\", default=\"\")\n",
+    "    arguments: List[Argument] = Field(description=\"List of semantic arguments for this predicate\")\n",
+    "\n",
+    "class SemanticRoleLabeling(BaseModel):\n",
+    "    sentence: str = Field(description=\"The original sentence\")\n",
+    "    predicates: List[Predicate] = Field(description=\"List of predicates with their semantic roles\")\n",
+    "\n",
+    "# Create a structured generator\n",
+    "generator = Generator(model, SemanticRoleLabeling)\n",
+    "\n",
+    "# Example text for semantic role labeling\n",
+    "text = \"John ate an apple in the park yesterday.\"\n",
+    "\n",
+    "# Create the prompt\n",
+    "prompt = f\"\"\"Perform semantic role labeling on the following sentence. Identify all predicates and their semantic arguments.\n",
+    "\n",
+    "Sentence: {text}\n",
+    "\n",
+    "Common semantic roles:\n",
+    "- ARG0: Agent (who performs the action)\n",
+    "- ARG1: Patient/Theme (what is affected by the action)\n",
+    "- ARG2: Recipient, Beneficiary, or Instrument\n",
+    "- ARGM-TMP: Temporal (when)\n",
+    "- ARGM-LOC: Location (where)\n",
+    "- ARGM-MNR: Manner (how)\n",
+    "- ARGM-PRP: Purpose (why)\n",
+    "\n",
+    "Analyze the sentence and output the semantic role labeling in the specified JSON format.\"\"\"\n",
+    "\n",
+    "# Generate structured output\n",
+    "result = generator(prompt, max_new_tokens=2048)\n",
+    "\n",
+    "'''\n",
+    "# Print the results\n",
+    "print(\"Original sentence:\", result.sentence)\n",
+    "print(\"\\nSemantic Role Labeling:\")\n",
+    "for pred in result.predicates:\n",
+    "    print(f\"\\nPredicate: {pred.predicate}\")\n",
+    "    for arg in pred.arguments:\n",
+    "        print(f\"  {arg.role}: {arg.text}\")\n",
+    "\n",
+    "'''"
+   ]
   }
  ],
  "metadata": {
