Initializing danish prompt

--- a/outlining.ipynb
+++ b/outlining.ipynb
@@ -12,10 +12,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "947168e9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/work/RuneEgeskovTrust#9638/miniconda3/envs/blame/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import transformers\n",
     "import accelerate\n",
@@ -203,6 +212,43 @@
    "outputs": [],
    "source": [
     "generator = Generator(model, BlameAnalysis)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5ceeceee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for sentence in tqdm.tqdm(sentences, desc = \"Deepseek blame (GPU)\"):\n",
+    "    prompt = f\"\"\"Udfør skyldidentifikation på følgende sætning.\n",
+    "    Sætning: {sentence}\n",
+    "    Regler:\n",
+    "    - Start med at afgøre, om der overhovedet er skyld til stede i sætningen\n",
+    "    - Identificer hvem der gives skylden, hvad de gives skylden for, og de argumenter der bruges\n",
+    "    - Sæt blame=true KUN hvis nogen/noget gives skylden for at forårsage et negativt udfald\n",
+    "    - \"text\"-feltet SKAL være PRÆCIS den sætning, der er angivet ovenfor - modificer den ikke\n",
+    "    - Hvis blame=true, må \"blamee\" IKKE være tom, og \"arguments\" skal indeholde det specifikke udfald, de gives skylden for\n",
+    "    - Lad ikke arguments være en tom streng\n",
+    "\n",
+    "    Semantiske roller:\n",
+    "    - Blamee: Den patient, der modtager skylden (hvem eller hvad gives skylden)\n",
+    "    - Argument: Hvad gives blamee skylden for (det negative udfald)\n",
+    "\n",
+    "    Angiv din analyse i JSON-format.\"\"\"\n",
+    "    with torch.no_grad():  # Disable gradient tracking\n",
+    "        result = generator(prompt, max_new_tokens=256, use_cache=False)\n",
+    "\n",
+    "    data = json.loads(result)\n",
+    "    #print(json.dumps(data, indent=2))\n",
+    "    # Parsing json for saving\n",
+    "    result_out = BlameAnalysis.model_validate_json(result)\n",
+    "    # (Over)Writing to file to avoid duplicates\n",
+    "    with open(\"result_blame.json\", \"a\") as f:\n",
+    "       json.dump(result_out.model_dump(), f, indent=2)\n",
+    "    torch.cuda.empty_cache()\n",
+    "\n"
    ]
   },
   {
