Now using danish prompts

--- a/old_stuff.ipynb
+++ b/old_stuff.ipynb
@@ -209,6 +209,64 @@
     "\n",
     "'''"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "973dd02f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Defining the pydantic class which ensures the structured output from the llm\n",
+    "class BlameAnalysis(BaseModel):\n",
+    "    text: str = Field(description=\"The exact original sentence being analyzed\")\n",
+    "    blame: bool = Field(description=\"Whether blame is present in the sentence\")\n",
+    "    blamee: Optional[str] = Field(\n",
+    "        default=None,\n",
+    "        description=\"Who or what is being blamed (must not be empty if blame=true)\"\n",
+    "    )\n",
+    "    arguments: Optional[str] = Field(\n",
+    "        default=None,\n",
+    "        description=\"What the blamee is being blamed for - the specific negative outcome (must not be empty if blame=true)\"\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "24bff7ba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for sentence in tqdm.tqdm(sentences, desc = \"Deepseek blame (GPU)\"):\n",
+    "    prompt = f\"\"\"Perform blame identification on the following sentence.\n",
+    "    Sentence: {sentence}\n",
+    "\n",
+    "    Rules:\n",
+    "    - Start by determining whether blame is present at all in the sentence\n",
+    "    - Identify who is being blamed, what they are being blamed for, and the arguments used\n",
+    "    - Set blame=true ONLY if someone/something is being blamed for causing a negative outcome\n",
+    "    - The \"text\" field must be EXACTLY the sentence provided above - do not modify it\n",
+    "    - If blame=true, \"blamee\" must NOT be empty and \"arguments\" must contain the specific outcome they are blamed for\n",
+    "    - Do not leave arguments as an empty string\n",
+    "\n",
+    "    Semantic roles:\n",
+    "    - Blamee: The patient receiving the blame (who or what is being blamed)\n",
+    "    - Argument: What is the blamee being blamed for (the negative outcome)\n",
+    "\n",
+    "    Output your analysis in JSON format.\"\"\"\n",
+    "    with torch.no_grad():  # Disable gradient tracking\n",
+    "        result = generator(prompt, max_new_tokens=256, use_cache=False)\n",
+    "\n",
+    "    data = json.loads(result)\n",
+    "    #print(json.dumps(data, indent=2))\n",
+    "    # Parsing json for saving\n",
+    "    result_out = BlameAnalysis.model_validate_json(result)\n",
+    "    # (Over)Writing to file to avoid duplicates\n",
+    "    with open(\"result_blame.json\", \"a\") as f:\n",
+    "       json.dump(result_out.model_dump(), f, indent=2)\n",
+    "    torch.cuda.empty_cache()\n"
+   ]
   }
  ],
  "metadata": {
