--- a/old_stuff.ipynb
+++ b/old_stuff.ipynb
@@ -234,6 +234,27 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "12092e64",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Dansk version af promp classen\n",
+    "class BlameAnalysis(BaseModel):\n",
+    "    text: str = Field(description=\"Den præcise originale sætning som analyseres\")\n",
+    "    blame: bool = Field(description=\"Hvorvidt skyld er til stede i sætningen eller ej\")\n",
+    "    blamee: Optional[str] = Field(\n",
+    "        default=None,\n",
+    "        description=\"Hvem eller hvad bliver beskyldt for noget (Må ikke være tom hvis blame=true)\"\n",
+    "    )\n",
+    "    arguments: Optional[str] = Field(\n",
+    "        default=None,\n",
+    "        description=\"Hvad blamee bliver beskyldt for - det specifikke negative udfald (Må ikke være tom hvis blame=true)\"\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "24bff7ba",
    "metadata": {},
    "outputs": [],
@@ -266,6 +287,43 @@
     "    with open(\"result_blame.json\", \"a\") as f:\n",
     "       json.dump(result_out.model_dump(), f, indent=2)\n",
     "    torch.cuda.empty_cache()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6de20a1e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for sentence in tqdm.tqdm(sentences, desc = \"Deepseek blame (GPU)\"):\n",
+    "    prompt = f\"\"\"Udfør skyldidentifikation på følgende sætning.\n",
+    "    Sætning: {sentence}\n",
+    "    Regler:\n",
+    "    - Start med at afgøre, om der overhovedet er skyld til stede i sætningen\n",
+    "    - Identificer hvem der gives skylden, hvad de gives skylden for, og de argumenter der bruges\n",
+    "    - Sæt blame=true KUN hvis nogen/noget gives skylden for at forårsage et negativt udfald\n",
+    "    - \"text\"-feltet SKAL være PRÆCIS den sætning, der er angivet ovenfor - modificer den ikke\n",
+    "    - Hvis blame=true, må \"blamee\" IKKE være tom, og \"arguments\" skal indeholde det specifikke udfald, de gives skylden for\n",
+    "    - Lad ikke arguments være en tom streng\n",
+    "\n",
+    "    Semantiske roller:\n",
+    "    - Blamee: Den patient, der modtager skylden (hvem eller hvad gives skylden)\n",
+    "    - Argument: Hvad gives blamee skylden for (det negative udfald)\n",
+    "\n",
+    "    Angiv din analyse i JSON-format.\"\"\"\n",
+    "    with torch.no_grad():  # Disable gradient tracking\n",
+    "        result = generator(prompt, max_new_tokens=256, use_cache=False)\n",
+    "\n",
+    "    data = json.loads(result)\n",
+    "    #print(json.dumps(data, indent=2))\n",
+    "    # Parsing json for saving\n",
+    "    result_out = BlameAnalysis.model_validate_json(result)\n",
+    "    # (Over)Writing to file to avoid duplicates\n",
+    "    with open(\"result_blame.json\", \"a\") as f:\n",
+    "       json.dump(result_out.model_dump(), f, indent=2)\n",
+    "    torch.cuda.empty_cache()\n",
+    "\n"
    ]
   }
  ],
