--- a/old_stuff.ipynb
+++ b/old_stuff.ipynb
@@ -5,12 +5,58 @@
    "execution_count": null,
    "id": "2d7f779c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'from_transformers' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m model = \u001b[43mfrom_transformers\u001b[49m(\n\u001b[32m      2\u001b[39m     transformers.AutoModelForCausalLM.from_pretrained(\u001b[33m\"\u001b[39m\u001b[33mmeta-llama/Llama-3.2-1B\u001b[39m\u001b[33m\"\u001b[39m),\n\u001b[32m      3\u001b[39m     transformers.AutoTokenizer.from_pretrained(\u001b[33m\"\u001b[39m\u001b[33mmeta-llama/Llama-3.2-1B\u001b[39m\u001b[33m\"\u001b[39m),\n\u001b[32m      4\u001b[39m )\n",
+      "\u001b[31mNameError\u001b[39m: name 'from_transformers' is not defined"
+     ]
+    }
+   ],
    "source": [
     "model = from_transformers(\n",
-    "    transformers.AutoModelForCausalLM.from_pretrained(\"TinyLlama/TinyLlama-1.1B-Chat-v1.0\"),\n",
-    "    transformers.AutoTokenizer.from_pretrained(\"TinyLlama/TinyLlama-1.1B-Chat-v1.0\"),\n",
+    "    transformers.AutoModelForCausalLM.from_pretrained(\"meta-llama/Llama-3.2-1B\"),\n",
+    "    transformers.AutoTokenizer.from_pretrained(\"meta-llama/Llama-3.2-1B\"),\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "567e14bb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "text_data = pd.read_csv(\"/work/RuneEgeskovTrust#9638/Bachelor/Bachelor_project/annotation_data_translated_version_03_10.csv\", encoding='utf-8')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "bf5e690b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Ændring af lov om aktiv arbejdsmarkedspolitik, lov om  arbejdsløshedsforsikring m.v., lov om orlov, lov om  arbejdsmarkedsuddannelser og lov om kommunal aktivering  (X)'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import ast\n",
+    "hello = ast.literal_eval(text_data.loc[2][\"da_segmented_text\"])\n",
+    "hello[356]"
    ]
   },
   {
@@ -328,8 +374,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
