trying to merge with government meta data

--- a/bachelor_testing.ipynb
+++ b/bachelor_testing.ipynb
@@ -4402,6 +4402,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 38,
+   "id": "d5401502",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "pandas.core.series.Series"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(final_data['date'])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 100,
    "id": "6f606ad3",
    "metadata": {},
@@ -5575,6 +5596,33 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "125005e1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "regerings_data = pd.read_csv(\"\")\n",
+    "\n",
+    "final_data[\"date\"] = pd.to_datetime(final_data[\"date\"], format=\"%Y-%m-%d\")\n",
+    "\n",
+    "\n",
+    "regerings_data[\"start_date\"] = pd.to_datetime(regerings_data[\"start_date\"], format=\"%Y-%m-%d\")\n",
+    "regerings_data[\"end_date\"]   = pd.to_datetime(regerings_data[\"end_date\"], format=\"%Y-%m-%d\")\n",
+    "\n",
+    "\n",
+    "def find_interval(date):\n",
+    "    match = regerings_data[(regerings_data[\"start_date\"] <= date) & (regerings_data[\"end_date\"] >= date)]\n",
+    "    if not match.empty:\n",
+    "        return match.index[0]  # or some column from df2, e.g., match[\"label\"].iloc[0]\n",
+    "    else:\n",
+    "        return None\n",
+    "\n",
+    "#final_data[\"matching_row\"] = final_data[\"date\"].apply(find_interval)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "0d813b37",
    "metadata": {},
    "outputs": [],
@@ -5586,8 +5634,11 @@
     "    paragraph_nr = int(entry['paragraph'])\n",
     "    sentence_nr = int(entry['sentence_nr'])\n",
     "\n",
-    "    #get preceding sentence\n",
+    "    #initialize information on current paragraph\n",
     "    temp_data = ast.literal_eval(final_data.loc[paragraph_nr]['da_segmented_text'])\n",
+    "\n",
+    "    #get preceding sentence\n",
+    "    temp_data_da_text = temp_data['da_segmented_text']\n",
     "    \n",
     "    pr_sentence_index = sentence_nr-1\n",
     "\n",
@@ -5596,17 +5647,24 @@
     "        pr_sent = 'Not available (first sentence in paragraph)'\n",
     "\n",
     "    else:\n",
-    "        pr_sent = f'sentence_nr {pr_sentence_index} \\n{temp_data[pr_sentence_index]}'\n",
+    "        pr_sent = f'sentence_nr {pr_sentence_index} \\n{temp_data_da_text[pr_sentence_index]}'\n",
     "\n",
     "    # find succesding sentence\n",
     "\n",
     "    suc_sent_index = sentence_nr + 1\n",
     "\n",
     "    try:\n",
-    "        suc_sent = f'sentence_nr {suc_sent_index} \\n{temp_data[suc_sent_index]}'\n",
+    "        suc_sent = f'sentence_nr {suc_sent_index} \\n{temp_data_da_text[suc_sent_index]}'\n",
     "\n",
     "    except:\n",
     "        suc_sent = 'Not available (last sentence in paragraph)'\n",
+    "\n",
+    "    \n",
+    "    #Find out if speaker is member of party in Government\n",
+    "    party = entry['party']\n",
+    "    date = temp_data['date']\n",
+    "    \n",
+    "\n",
     "\n",
     "\n",
     "    #make into dict\n",
