do not know what is new

--- a/bachelor_testing.ipynb
+++ b/bachelor_testing.ipynb
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "8a6a298e",
    "metadata": {},
    "outputs": [],
@@ -278,6 +278,7 @@
     "        )\n",
     "        for sent in sentence_list\n",
     "    ]\n",
+    "\n",
     "\n",
     "    return blame_binary\n"
    ]
@@ -4163,6 +4164,18 @@
    "outputs": [],
    "source": [
     "cleaned_final_data.to_csv(\"/work/MarkusLundsfrydJensen#1865/Bachelor_project/cleaned_annotation_data_translated_with_blame_heuristics.csv\", index = False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "134c0695",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Data with all templates\n",
+    "\n",
+    "all_templates_data = pd.read_csv()"
    ]
   },
   {
