json files ready for annotation/training

--- a/json_formatting_of_prelimenary_blame_detection.ipynb
+++ b/json_formatting_of_prelimenary_blame_detection.ipynb
@@ -100,11 +100,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Now append preceding and succeding sentence for each blame\n",
-    "import json\n",
-    "# Load the flattened sentence JSON\n",
-    "with open(\"/work/MarkusLundsfrydJensen#1865/Bachelor_project/labelstudio_merged.json\", \"r\", encoding=\"utf-8\") as f:\n",
-    "    json_data = json.load(f)\n",
+    "\n",
     "\n",
     "\n"
    ]
@@ -116,6 +112,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
+    "#Now append preceding and succeding sentence for each blame\n",
+    "import json\n",
+    "# Load the flattened sentence JSON\n",
+    "with open(\"/work/MarkusLundsfrydJensen#1865/Bachelor_project/labelstudio_merged.json\", \"r\", encoding=\"utf-8\") as f:\n",
+    "    json_data = json.load(f)\n",
     "#also make government data available\n",
     "\n",
     "regerings_data = pd.read_csv(\"/work/MarkusLundsfrydJensen#1865/Bachelor_project/danish_govs.csv\")\n",
@@ -137,16 +139,9 @@
     "        return parties\n",
     "    else:\n",
     "        print('empty')\n",
-    "        return None\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a9bba1aa",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "        return None\n",
+    "\n",
+    "\n",
     "\n",
     "import ast\n",
     "\n",
@@ -203,14 +198,16 @@
     "\n",
     "    #update\n",
     "    entry.update(context_dict)\n",
-    "\n",
-    "    \n",
-    "\n",
-    "\n",
-    "\n",
-    "    \n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a9bba1aa",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
